Migrate to rabbitmq scripts version 3.0.1

--- a/modules/rabbitmq/templates/rabbitmq.config.erb
+++ b/modules/rabbitmq/templates/rabbitmq.config.erb
@@ -2,11 +2,8 @@
 % Template Path: <%= @module_name %>/templates/rabbitmq.config
 [
   {rabbit, [
-<% if @ldap_auth -%>
-    {auth_backends, [rabbit_auth_backend_internal, rabbit_auth_backend_ldap]},
-<% end -%>
 <% if @config_cluster -%>
-    {cluster_nodes, {[<%= @r_cluster_nodes.map { |n| "\'rabbit@#{n}\'" }.join(', ') %>], <%= @cluster_node_type %>}},
+    {cluster_nodes, {[<%= @_cluster_nodes.map { |n| "\'rabbit@#{n}\'" }.join(', ') %>], <%= @cluster_node_type %>}},
     {cluster_partition_handling, <%= @cluster_partition_handling %>},
 <% end -%>
 <%- if @ssl %>
@@ -14,8 +11,8 @@
     {ssl_options, [{cacertfile,"<%= @ssl_cacert %>"},
                     {certfile,"<%= @ssl_cert %>"},
                     {keyfile,"<%= @ssl_key %>"},
-                    {verify,<%= @ssl_verify %>},
-                    {fail_if_no_peer_cert,<%= @ssl_fail_if_no_peer_cert %>}]},
+                    {verify,verify_none},
+                    {fail_if_no_peer_cert,false}]},
 <%- end -%>
 <% if @config_variables -%>
 <%- @config_variables.keys.sort.each do |key| -%>
@@ -24,11 +21,7 @@
 <%- end -%>
     {default_user, <<"<%= @default_user %>">>},
     {default_pass, <<"<%= @default_pass %>">>}
-  ]}<% if @config_kernel_variables -%>,
-  {kernel, [
-    <%= @config_kernel_variables.sort.map{|k,v| "{#{k}, #{v}}"}.join(",\n    ") %>
   ]}
-<%- end -%>
 <% if @config_stomp -%>,
 % Configure the Stomp Plugin listening port
   {rabbitmq_stomp, [
@@ -37,17 +30,6 @@
     {ssl_listeners, [<%= @ssl_stomp_port %>]}
   <%- end -%>
   ]}
-<%- if @ldap_auth -%>,
-% Configure the LDAP authentication plugin
-  {rabbitmq_auth_backend_ldap, [
-    {other_bind, anon},
-    {servers, ["<%= @ldap_server %>"]},
-    {user_dn_pattern, "<%= @ldap_user_dn_pattern %>"},
-    {use_ssl, <%= @ldap_use_ssl %>},
-    {port, <%= @ldap_port %>},
-    {log, <%= @ldap_log %>}
-  ]}
-<% end -%>
 <%- end -%>
 ].
 % EOF
